--- a/mount/keycloak/theme/keycloak.v2/login/messages/messages_en.properties
+++ b/mount/keycloak/theme/keycloak.v2/login/messages/messages_en.properties
@@ -1,5 +1,1 @@
-customLoginRevolutionize=Revolutionize
-customLoginYour=Your
-customLoginDigital=Digital
-customLoginTransformation=Transformation
-customIndustrialOperatingSystem=Industrial operating system
+suposLang=en
