--- a/mount/node-red/offline_modules/node-supmodel-emqx/locales/zh-CN/supmodel.json
+++ b/mount/node-red/offline_modules/node-supmodel-emqx/locales/zh-CN/supmodel.json
@@ -5,12 +5,16 @@
     "selected_model_name": "已选：",
     "page_previous": "上一页",
     "page_next": "下一页",
+    "data_type_relation": "关系",
+    "data_type_times": "时序",
     "label_serial": "第",
     "label_total": "共",
     "label_items": "条",
     "label_data_error": "条数据异常",
     "label_import": "导入",
+    "label_export": "导出",
     "label_download_template": "下载模版",
+    "label_add_one": "新增",
     "label_delete_all": "删除全部",
     "tab_basicinfo": "基础配置",
     "tab_mappings": "位号映射",
@@ -26,18 +30,21 @@
     "network_error": "网络异常",
     "table_header_serial": "序号",
     "table_header_display_name": "文件夹路径",
-    "table_header_file_name": "文件名称",
+    "table_header_file_name": "文件路径",
     "table_header_alias": "文件别名",
     "table_header_prop_name": "属性名称",
     "table_header_prop_type": "属性类型",
     "table_header_tag_name": "位号名",
     "table_header_operate": "操作",
     "custom_protocol": "自定义协议",
-    "error_require_field": "必填字段不能为空",
+    "error_path_not_null": "文件路径不能为空",
+    "error_field_not_null": "属性名称不能为空",
+    "error_field_type_not_null": "属性类型不能为空",
+    "error_tag_not_null": "位号名不能为空",
     "error_invalid_filename": "文件名称不能包含特殊符号",
     "error_execeed_max_length": "文件名称和文件别名长度不能超过63",
     "error_invalid_fieldname": "属性名称只能包含数字、字母和下划线, 并且只能以字母开头",
-    "error_invalid_type": "属性类型只能是以下几种数据类型: int, long, double, float, boolean, datetime, string",
+    "error_invalid_type": "属性类型只能是以下几种数据类型: integer, long, double, float, boolean, datetime, string",
     "error_invalid_table_data": "表格中存在非法数据",
     "error_invalid_folder_path": "文件夹路径不能以/开头"
   }
