fix: 法约说去掉customIndustrialOperatingSystem

--- a/mount/keycloak/theme/keycloak.v2/login/messages/messages_en.properties
+++ b/mount/keycloak/theme/keycloak.v2/login/messages/messages_en.properties
@@ -1,5 +1,5 @@
 suposLang=en
-customIndustrialOperatingSystem=Industrial operating system
+customIndustrialOperatingSystem=
 
 # License Page
 licenseAuthorization=License Authorization
