feat: update pics

--- a/mount/keycloak/theme/keycloak.v2/login/messages/messages_en.properties
+++ b/mount/keycloak/theme/keycloak.v2/login/messages/messages_en.properties
@@ -1,5 +1,5 @@
 suposLang=en
-customIndustrialOperatingSystem=
+customIndustrialOperatingSystem=Industrial operating system
 
 # License Page
 licenseAuthorization=License Authorization
